--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "^3.4|^4.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "staudenmeir/eloquent-eager-limit": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
