--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "^3.4|^4.0",
         "maatwebsite/excel": "^3.1",
+        "scheb/yahoo-finance-api": "^4.2",
         "staudenmeir/eloquent-eager-limit": "^1.0"
     },
     "require-dev": {
